gcc/testsuite/rust/compile/doc_isolated_cr_inner_block_comment.rs
pub fn main ()
{
// { dg-error "Isolated CR" "" { target *-*-* } .+1 }
  /*! doc cr comment */
}
